fix: deck container filters are now hidden by default, and not playing the hiding animation when the site is opened

--- a/src/deck-container/deck-container.component.scss
+++ b/src/deck-container/deck-container.component.scss
@@ -1,19 +1,19 @@
 * {
-    color: white;
-    // padding: 4px;
+  color: white;
+  // padding: 4px;
 }
 
-#deck-container {    
-    position: relative;
-    width: 350px;
-    background-color: rgba($color: #000000, $alpha: 0.8);
-    border-radius: 4px;
+#deck-container {
+  position: relative;
+  width: 350px;
+  background-color: rgba($color: #000000, $alpha: 0.8);
+  border-radius: 4px;
 
-    --mat-filled-button-icon-spacing: 0;
-    --mat-filled-button-icon-offset: 0;
-    
-    // height: calc(100dvh - 90px);
-    padding: 10px;
+  --mat-filled-button-icon-spacing: 0;
+  --mat-filled-button-icon-offset: 0;
+
+  // height: calc(100dvh - 90px);
+  padding: 10px;
 }
 
 // #search-filter-container {
@@ -29,107 +29,103 @@
 // }
 
 mat-label {
-    color: gray;
+  color: gray;
 }
 
 #deck-info-container {
-    display: flex;
+  display: flex;
 }
 
 #card-count {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .class-indicator-holder {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px 0;
 }
 
 #card-list-container {
-    // height: 400px;
-    height: calc(100dvh - 380px);
-    overflow-y: auto;
+  // height: 400px;
+  height: calc(100dvh - 380px);
+  overflow-y: auto;
 
-    img {
-        height: 30px;
-        width: 94%;
-        object-fit: cover;
-    }
+  img {
+    height: 30px;
+    width: 94%;
+    object-fit: cover;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    * {
-        display: none;
-    }
+  * {
+    display: none;
+  }
 }
 
-.removeAllButton{
-    margin-left: 10px;
-    height: 80%;
+.removeAllButton {
+  margin-left: 10px;
+  height: 80%;
+}
+
+.filters-container {
+  position: absolute;
+  // width: 150px;
+  top: 78px;
+  left: 0;
+  right: 0;
+  background-color: rgba($color: #000000, $alpha: 0.9);
+  border: 1px white solid;
+  border-radius: 4px;
+  padding: 10px;
+  z-index: 2;
+  opacity: 0;
+  display: none;
+  animation-fill-mode: forwards;
 }
 
 // Slide in animation
-
-#filters-container {
-    position: absolute;
-    // width: 150px;
-    top: 78px;
-    left: 0;
-    right: 0;
-    background-color: rgba($color: #000000, $alpha: 0.9);
-    border: 1px white solid;
-    border-radius: 4px;
-    padding: 10px;
-    z-index: 2;
-}
-
-/* Define Angular animation */
-.triggerable {
-    position: relative;
-}
-
 .visible {
-    animation: slideIn 0.2s ease-out;
-    display: block;
+  display: block;
+  animation: slideIn 0.2s ease-out forwards;
 }
 
 .hidden {
-    animation: slideOut 0.2s ease-out;
-    animation-fill-mode: forwards;
-    
+  animation: slideOut 0.2s ease-out forwards;
+  display: none;
 }
 
 @keyframes slideIn {
-    from {
-        opacity: 0;
-        transform: translateY(-10%);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
 
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes slideOut {
-    from {
-        opacity: 1;
-        transform: translateY(0);
-        display: block;
-    }
+  from {
+    opacity: 1;
+    transform: translateY(0);
+    display: block;
+  }
 
-    to {
-        opacity: 0;
-        transform: translateY(-10%);
-        display: none;
-    }
+  to {
+    opacity: 0;
+    transform: translateY(-10%);
+    display: none;
+  }
 }
 
 #mana-list-container {
-    display: flex;
-    padding-top: 0;
+  display: flex;
+  padding-top: 0;
 }
 
 // .custom-icon-button {
@@ -142,20 +138,20 @@ mat-label {
 // }
 
 #import-deck-container {
-    padding-top: 5px;
-    background-color: #000000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: nowrap;
-    position: sticky;
-    bottom: 0;
+  padding-top: 5px;
+  background-color: #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  position: sticky;
+  bottom: 0;
 }
 
 .mat-mdc-standard-chip {
-    border-radius: 4px;
+  border-radius: 4px;
 }
 
 mat-slider {
-    width: 80%;
+  width: 80%;
 }
